tests/ui/feature-gates/feature-gate-struct-target-features.stderr
error: attribute should be applied to a function definition
  --> $DIR/feature-gate-struct-target-features.rs:1:1
   |
LL | #[target_feature(enable = "avx")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | struct Avx {}
   | ------------- not a function definition

error: aborting due to 1 previous error

