tests/ui/feature-gates/feature-gate-struct-target-features.rs
#[target_feature(enable = "avx")] //~ ERROR attribute should be applied to a function definition
struct Avx {}

fn main() {}
